# terminal

./: Makefile  pyproject.toml  readme.md
src/terminal/: __init__.py
